# report_builder

./: README.md  main.py  pyproject.toml  report_builder.yaml
configs/npe/: abs_cft_core_accounts.yaml  abs_cft_core_agreements.yaml  abs_tps_zku_payments.yaml  auto_funding.yaml  (+9 more)
dag_generator/: dag_generator.py  dag_template.jinja
report_builder/: __init__.py  processing.py
sql/: abs_cft_core_accounts.sql  abs_cft_core_agreements.sql  abs_tps_zku_payments.sql  account_statuses_solar_abs.sql  acquiring_alfa_verification.sql  agreements_solar_abs.sql  auto_funding.sql  merchants.sql  merchants_cards.sql  merchants_final.sql  merchants_monthly_solar_abs.sql  merchants_payments.sql  merchants_settl.sql  operational_reporting_osv_account_balance.sql  operational_reporting_red_saldo.sql  osv_account_balance_report.sql  ps_mir_card_transactions.sql  ps_mir_credit_transactions.sql  ps_mir_fake_clears.sql  ps_mir_transaction_duplicate.sql
templates/: Acquiring.docx  AcquiringHelp.docx  Alpha.docx  RasBank.docx  SBP.docx  SBPHelp.docx  abs_cft_core_accounts.j2  abs_cft_core_agreements.j2  account_statuses_solar_abs.j2  acquiring_alfa_email.j2
tests/: conftest.py  test_dwh2notification.py  test_dwh2s3.py  test_endpoint.py  test_gp2s3.py  test_utils.py
ui_ddl/: abs_tps_zku_payments.sql  account_statuses_solar_abs.sql  acquiring_alfa_verification.sql  agreements_solar_abs.sql  auto_funding.sql  merchants_monthly_solar_abs.sql  merchants_payments.sql  ps_mir_card_transactions.sql  ps_mir_credit_transactions.sql  ps_mir_fake_clears.sql  ps_mir_transaction_duplicate.sql
(+67 files in other folders)
